ts-type-checker/environment/visible_tests/narrowSwitchOptionalChainContainmentEvolvingArrayNoCrash1.errors
narrowSwitchOptionalChainContainmentEvolvingArrayNoCrash1.ts(5,5): error TS7034: Variable 'foo' implicitly has type 'any[]' in some locations where its type cannot be determined.
narrowSwitchOptionalChainContainmentEvolvingArrayNoCrash1.ts(9,5): error TS7005: Variable 'foo' implicitly has an 'any[]' type.
